- moved analytics to analytics service. - month/week notifications - only fast flow